--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:24.0.0'
     compile 'com.android.support:design:24.0.0'
-    compile 'com.google.android.gms:play-services-vision:7.8.0+'
+    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.google.android.gms:play-services-vision:7.8+'
     compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
     compile 'com.android.support.constraint:constraint-layout:1.1.3'
-    compile 'com.beardedhen:androidbootstrap:2.3.2'
 }
