--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
 
     defaultConfig {
         applicationId "com.google.android.gms.samples.vision.face.facetracker"
@@ -20,10 +19,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.google.android.gms:play-services-vision:7.8+'
-    compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
-    compile 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.google.android.gms:play-services-vision:7.8+'
+    implementation 'org.apache.directory.studio:org.apache.commons.io:2.4'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
